[gd_scene load_steps=6 format=3 uid="uid://dxrdr0da0cuig"]

[ext_resource type="Script" path="res://hud/HUD.gd" id="1_0x5f7"]
[ext_resource type="FontFile" uid="uid://cxps4cwdmuqwu" path="res://fonts/Xolonium-Regular.ttf" id="2_00700"]
[ext_resource type="FontFile" uid="uid://cyxhh7ddkn62q" path="res://fonts/Montserrat-Medium.ttf" id="3_f3348"]

[sub_resource type="InputEventAction" id="InputEventAction_clhk2"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_r1dwh"]
events = [SubResource("InputEventAction_clhk2")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0x5f7")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_right = 67.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_00700")
theme_override_font_sizes/font_size = 64
text = "score: 0
"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_00700")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -140.0
offset_right = 111.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_00700")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_r1dwh")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SurvivalTime" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -257.0
offset_top = 80.0
offset_right = 253.0
offset_bottom = 158.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_00700")
theme_override_font_sizes/font_size = 64
text = "survival time: 0"

[node name="Health" type="Label" parent="."]
offset_right = 202.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("3_f3348")
theme_override_font_sizes/font_size = 64
text = "health: 1"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
